la fonctionnalité d'ajout